--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.1",
+    "animejs": "^3.2.1",
     "autoprefixer": "^10.4.12",
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
