--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clear": "rimraf .next",
     "dev": "yarn clear && next dev",
-    "build": "env-cmd -f .env.development next build",
+    "build": "next build",
     "build-start": "yarn clear && next build && next start",
     "start": "next start",
     "build-staging": "env-cmd -f .env.staging next build",
